<resources>
    <string name="app_name">Kepler Browser</string>
    <string name="enter_url_or_keywords">Enter Url or Keywords</string>
    <string name="check_connection">Please recheck your internet connection</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="search_button">Search Button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <string name="successfully_added">Successfully Added!</string>
    <string name="undo">UNDO</string>
    <string name="undone">Undone!</string>
    <string name="clear_history">Clear History</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure? You cannot undo it.</string>
    <string name="open_using">Open using…</string>
    <string name="private_mode_is_on">Private mode is turned ON</string>
    <string name="press_back_again_to_close_app">Press back again to close the application</string>

    <string name="file_downloaded_successfully">File Downloaded Successfully</string>
    <string name="download_failed">Download Failed</string>
    <string name="downloading_file">Downloading file…</string>

    <!-- Preference Titles -->
    <string name="browsing_settings">Browsing Settings</string>
    <string name="theme_preference">Theme Preference</string>
    <string name="preferred_search_engine">Preferred Search Engine</string>

    <!-- Browsing Settings Preferences -->
    <string name="javascript_enabled">Enable JavaScript</string>
    <string name="disable_javascript">Disable JavaScript</string>
    <string name="private_mode">Private Mode</string>

    <string name="private_mode_summary_off">Browsing History will not be saved</string>
    <string name="private_mode_summary_on">Disable Private Mode to save browsing history</string>

    <string name="js_disable_summary">Makes the browser more secure. You may lose some functionality.</string>
    <string name="js_enable_summary">Web Pages will be able to execute JavaScript providing more functionality. May make the browser vulnerable.</string>

    <string name="preferred_search_engine_def_value">https://www.google.com/</string>

    <!-- Theme Preferences -->
    <string name="dark_theme">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <!-- Menu Items -->
    <string name="bookmarks">Bookmarks</string>
    <string name="saved_pages">Saved Pages</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="save_page">Save Page</string>
    <string name="new_tab">New Tab</string>
    <string name="clear_all_tabs">Clear All Tabs</string>
    <string name="view">View</string>

    <!-- Permission Request Strings -->
    <string name="external_storage_permission_rationale">The app will not be able to read/write files if the storage permission is denied. Please enable it in settings.</string>
    <string name="permission_request">Read External Storage is a crucial permission for the app\'s functionality. Please enable it in your settings to be able to use this app.</string>
    <string name="show_settings">Show Settings</string>

</resources>
