<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:max="100"
        android:theme="@style/ProgressBarColor"
        android:visibility="visible" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/defaultToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="match_parent"
                        android:background="@color/light_violet"
                        android:contentDescription="@string/search_button"
                        android:onClick="onSearchButtonClicked"
                        android:src="@drawable/search_button" />

                    <ImageButton
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="match_parent"
                        android:background="@color/light_violet"
                        android:contentDescription="@string/bookmarks"
                        android:onClick="onAddToBookmarksClicked"
                        android:src="@drawable/add_to_bookmarks" />

                    <ImageButton
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="match_parent"
                        android:background="@color/light_violet"
                        android:contentDescription="@string/save_page"
                        android:onClick="onSavePageClicked"
                        android:src="@drawable/file_download" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/searchToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/searchEditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/enter_url_or_keywords"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="text|textAutoComplete"
                        android:singleLine="true" />

                    <ImageButton
                        android:id="@+id/cancelSearchBtn"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="match_parent"
                        android:background="@color/light_violet"
                        android:contentDescription="@android:string/cancel"
                        android:onClick="onCancelSearchClicked"
                        android:src="@drawable/close" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/tabContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/bottomNavBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/prev"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/light_violet"
                        android:contentDescription="@string/previous"
                        android:onClick="onPreviousClicked"
                        android:src="@drawable/previous_button" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@color/light_violet"
                        android:contentDescription="@string/home"
                        android:onClick="onTabsClicked"
                        android:src="@drawable/tabs" />

                    <ImageButton
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/light_violet"
                        android:contentDescription="@string/next"
                        android:onClick="onNextClicked"
                        android:src="@drawable/next_button" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>